tests/errors/PrintlnNotInt.java
class PrintlnNotInt
{
    public static void main(String[] a)
    {
		System.out.println(true);
    }
}